--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,155 +1,573 @@
-@import url('https://fonts.googleapis.com/css2?family=Port+Lligat+Sans&display=swap');
+/* ===========================
+        TIPOGRAFÍAS
+=========================== */
 
-/* RESET */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Port+Lligat+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Port+Lligat+Slab&display=swap');
+
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
 }
 
-body {
-  background-color: #000;
-  color: #fff;
-}
 
-/* HEADER */
+/* ===========================
+        HEADER
+=========================== */
+
 .header {
+  font-family: 'Poppins', sans-serif;
+  width: 100%;
+  padding: 0px 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 60px;
+  background-color: #0b0b0b;
 }
 
-.logo {
-  font-size: 26px;
-  font-weight: 800;
+
+.logo-img {
+  height: 150px; 
+  display: block;
 }
 
-.logo span {
-  color: #ff0000;
-}
 
 .nav {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 25px;
 }
+
 
 .help {
-  color: #ccc;
-}
-
-/* BOTONES */
-.btn {
-  padding: 10px 22px;
-  border-radius: 12px;
+  color: #dddddd;
+  font-size: 15px;
   text-decoration: none;
-  cursor: pointer;
-  font-weight: 600;
+  transition: color 0.3s ease;
 }
 
-.btn-light {
-  background: #d4d4d4;
-  color: #000;
-}
-
-.btn-main {
-  background: #d4d4d4;
-  color: #000;
-  margin-top: 20px;
-}
-
-/* HERO */
-.hero {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 100px 50px;
-  gap: 40px;
-}
-
-.hero-content {
-  max-width: 500px;
-  text-align: center; 
-}
-
-.hero-content h1 {
+.help:hover {
   color: #ff0000;
-  font-size: 28px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 20px;
 }
 
-.hero-content .btn-main {
-  display: inline-block;
-  margin-top: 30px;     /* lo baja un poco más */
+/*BOTÓN INICIA SESIÓN*/
+.btn-main {
+  padding: 10px 20px;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #000;
+  font-weight: 600;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.hero-img {
-  width: 380px;
-  opacity: 0.8;
+.btn-main:hover {
+  background-color: rgba(229, 9, 20, 0.7); 
+  color: #fff;
 }
 
-/* PELÍCULAS */
-.movies-section {
-  text-align: center;
-  padding: 50px 0;
-}
 
-.movies-section h2 {
-  font-family: 'Port Lligat Sans', sans-serif;
-  margin-bottom: 30px;
-  font-size: 22px;
-}
 
-.movies-grid {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-}
 
-.movies-grid img {
-  width: 140px;
-  border-radius: 10px;
-}
+/* ===========================
+            FOOTER
+=========================== */
 
-/* FOOTER */
 .footer {
-  margin-top: 60px;
-  padding: 40px 80px;
+  font-family: 'Poppins', sans-serif;
+  background-color: #0b0b0b;
+  padding: 0px 80px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr); /*Crea 3 columnas. Cada una con 1fr*/
+  align-items: start;
+  justify-items: center; 
 }
 
-.footer h4 {
-  margin-bottom: 10px;
+.footer-logo-img {
+  height: 140px;   
+  width: auto;
+  display: block;
+  margin: 0 auto 0px;
 }
 
 .footer-col {
   display: flex;
   flex-direction: column;
-  gap: 6px;
+  gap: 8px;
+  align-items: center;
+}
+
+.footer-col h4 {
+  color: #ffffff;
+  font-size: 16px;
+  margin-bottom: 10px;
+  font-weight: 600;
+}
+
+.footer-col p {
+  color: #cccccc;
+  font-size: 14px;
 }
 
 .center {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; 
+  align-items: center;
+
+
 }
 
-.redes .social-icons {
+.soporte-link {
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+
+}
+
+.soporte-link:hover {
+  color: #ff0000;
+}
+
+.redes  {
   display: flex;
-  gap: 10px;
+  justify-content: center;
+  gap: 12px;
   margin-top: 10px;
 }
 
 .social-icons img {
-  width: 40px;
+  width: 28px;
+  opacity: 0.8;
+  transition: opacity 0.3s ease;
+}
+
+.social-icons img:hover {
+  opacity: 1;
 }
 
 .copyright {
+  grid-column: 1 / -1; 
   text-align: center;
-  padding: 15px;
+  padding: 15px 0 0;
+  color: #777;
+  font-size: 13px;
+  border-top: 1px solid #222;
+  margin-top: 20px;
+}
+
+
+
+/* ===========================
+        HERO SECTION
+=========================== */
+
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 120px 50px;
+  gap: 70px;
+  background-color: #0e0e0e;
+}
+
+.hero-content {
+  max-width: 480px;
+  text-align: center;
+}
+
+.hero-content h1 {
+  color: #ff0000;
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 30px;
+  font-weight: 100;
+  line-height: 1.3;/*espacio entre lineas*/
+  margin-bottom: 25px;
+}
+
+.btn-index {
+  display: inline-block;
+  padding: 14px 26px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #000;
+  text-decoration: none;
+  transition: 0.3s ease;
+}
+
+.btn-index:hover {
+  background-color: rgba(255, 0, 0, 0.7);
+  color: #fff;
+}
+
+.hero-img {
+  width: 400px;
+  opacity: 0.3;
+}
+
+
+/* ===========================
+    MOVIES SECTION
+=========================== */
+
+.movies-section {
+  text-align: center;
+  padding: 70px 0;
+  background-color: #0b0b0b;
+}
+
+.movies-section h2 {
+  font-family: 'Port Lligat Sans', sans-serif;
+  font-size: 30px;
+  margin-bottom: 40px;
+  font-weight: 100;
+  color: #ffffff;
+}
+
+.movies-grid {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.movies-grid img {
+  width: 150px;
+  border-radius: 12px;
+  transition: transform 0.3s ease;
+}
+
+.movies-grid img:hover {
+  transform: scale(1.05);/*mas grande*/
+}
+
+
+
+
+/* ===========================
+            LOGIN
+=========================== */
+
+.login-body {
+  background: radial-gradient(circle at center, #2a0000, #0d0d0d 50%);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.login-header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  margin-bottom: 100px;
+}
+
+
+.login-header .logo-link {
+  font-size: 28px;
+  font-weight: 800;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+
+.login-container {
+  flex: 1;/*para que ocupe el espacio vertical disponible*/
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 30px;
+  margin-bottom: 400px;
+}
+
+
+.login-box {
+  background: #000;
+  padding: 40px 45px;
+  border-radius: 12px;
+  width: 350px;
+  box-shadow: 0 0 35px rgba(0, 0, 0, 0.7);
+  text-align: center;
+}
+
+.login-box h2 {
+  font-family: 'Bebas Neue', sans-serif;
+  color: #ff1a1a;
+  font-size: 35px;
+  font-weight: 10;
+  margin-bottom: 12px;
+}
+
+.login-box p {
+  font-family: 'Port Lligat Slab', serif;
   font-size: 14px;
-  opacity: 0.7;
+  color: #dddddd;
+  margin-bottom: 20px;
+}
+
+
+.login-box input {
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border-radius: 6px;
+  border: none;
+  background: #1a1a1a;
+  color: #ffffff;
+  font-size: 14px;
+}
+
+.login-box input::placeholder {
+  color: #888;
+}
+
+
+.btn-login {
+  width: 100%;
+  display: block;
+  padding: 14px 20px;
+  font-size: 16px;
+  border-radius: 6px;
+  background-color: #e50914;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  margin-top: 12px;
+  transition: background-color 0.3s ease;
+  font-family: 'Poppins', sans-serif;
+}
+
+.btn-login:hover {
+  background-color: rgba(229, 9, 20, 0.7);
+}
+
+
+.help-link {
+  font-family: 'Poppins', sans-serif;
+  display: inline-block;
+  margin-top: 12px;
+  font-size: 13px;
+  color: #aaaaaa;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.help-link:hover {
+  color: #ffffff;
+}
+
+
+
+
+/* ===========================
+    CONTACTO - SOPORTE
+=========================== */
+
+.contacto-body {
+  background: radial-gradient(circle at center, #2a0000, #0d0d0d 50%);
+  font-family: 'Poppins', sans-serif;
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
+}
+
+.contacto {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 60px 20px;
+}
+
+.soporte {
+  max-width: 600px;
+  width: 100%;
+  background-color: #111;
+  padding: 40px;
+  border-radius: 12px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
+  text-align: center;
+  margin-bottom: 200px;
+}
+
+.soporte h1 {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 32px;
+  font-weight: 50;
+  color: #ff0000;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.soporte p {
+  font-size: 15px;
+  color: #cccccc;
+  margin-bottom: 30px;
+}
+
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+label {
+  text-align: left;
+  font-size: 14px;
+  color: #dddddd;
+}
+
+input,
+textarea {
+  padding: 12px;
+  border-radius: 6px;
+  border: none;
+  background-color: #1a1a1a;
+  color: #ffffff;
+  font-size: 14px;
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: #888;
+}
+
+button[type="submit"] {
+  padding: 14px 20px;
+  background-color: #e50914;
+  color: #fff;
+  font-weight: bold;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button[type="submit"]:hover {
+  background-color: rgba(229, 9, 20, 0.7);
+}
+
+
+
+
+/* ===========================
+          COLECCIÓN
+=========================== */
+
+.header-coleccion {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 50px;
+}
+
+
+.coleccion-body {
+  background-color: #0b0b0b;
+  font-family: 'Poppins', sans-serif;
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
+}
+
+
+.coleccion h1 {
+  font-family: 'Bebas Neue', sans-serif;
+  font-weight: 50;
+  font-size: 36px;
+  color: #ff0000;
+  text-transform: uppercase;
+  margin-left: 260px;
+}
+
+
+.nav .btn-main {
+  padding: 10px 20px;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #000;
+  font-weight: 200;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.nav .btn-main:hover {
+  background-color: rgba(229, 9, 20, 0.7);
+  color: #fff;
+}
+
+
+.peliculas-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 200px;
+  
+}
+
+.peliculas-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
+  /*Repeat para repetir lo que va en parentefsis. Auto-fit ajusta el nº de columnas automáticamente. 
+  Minmax indica que cada columna tiene un mínimo de 200px y máximo el espacio disponible.*/
+
+  gap: 30px;
+  width: 1000px; 
+}
+
+.pelicula {
+  background-color: #111;
+  padding: 10px;          
+  border-radius: 8px;     
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4); 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 6px;               
+  max-width: none;
+  transition: transform 0.25s ease;
+}
+
+.pelicula:hover {
+  transform: scale(1.03);
+}
+
+.pelicula img {
+  width: 100%;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.pelicula h3 {
+  font-weight: 20;
+  font-size: 16px;
+  color: #ffffff;
+  margin:0;
+}
+
+
+.btn-detalles {
+  margin-top: auto;
+  padding: 10px 18px;
+  background-color: #e50914;
+  color: #fff;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.btn-detalles:hover {
+  background-color: rgba(229, 9, 20, 0.7);
 }
